# Diagrama de Arquitectura del Sistema Shibasito

## Arquitectura General del Sistema

```mermaid
graph TB
    %% =========================
    %% CAPA DE PRESENTACIÓN
    %% =========================
    
    subgraph "🎨 CAPA DE PRESENTACIÓN"
        Desktop["📱 Aplicación Desktop
        ═══════════════
        • Electron/Node.js
        • Interfaz de usuario
        • Gestión de sesiones
        • Conexión API Gateway"]
        
        Mobile["📱 Aplicación Mobile
        ═══════════════
        • React Native
        • Interfaz móvil
        • Sincronización
        • Offline support"]
    end

    %% =========================
    %% CAPA DE API GATEWAY
    %% =========================
    
    subgraph "🌐 CAPA DE API GATEWAY"
        Gateway["🌐 API Gateway
        ══════════════════
        • Load Balancer
        • Rate Limiting
        • Authentication
        • Request Routing
        • CORS Handling"]
    end

    %% =========================
    %% CAPA DE SERVICIOS
    %% =========================
    
    subgraph "⚙️ CAPA DE SERVICIOS DE NEGOCIO"
        LP1["🏦 Servicio LP1 - Banco
        ═══════════════════════
        • Java 11 / Spring Boot
        • Puerto: 8080
        • Operaciones bancarias
        • Validación de cuentas
        • Transacciones financieras
        • API: /api/v1/banco/*"]
        
        LP2["🏛️ Servicio LP2 - RENIEC
        ════════════════════════
        • Python 3.11 / FastAPI
        • Puerto: 8000
        • Validación de identidad
        • Consulta DNI
        • Registro de ciudadanos
        • API: /api/v1/reniec/*"]
    end

    %% =========================
    %% CAPA DE MENSAJERÍA
    %% =========================
    
    subgraph "📬 CAPA DE MENSAJERÍA"
        RabbitMQ["📬 RabbitMQ
        ═══════════════
        • AMQP Message Broker
        • Puerto: 5672 (AMQP)
        • Puerto: 15672 (Management)
        • Topic Exchange
        • Fanout Exchange
        • Message Persistence"]
        
        subgraph "🔄 Message Flow"
            VAL_EX["validacion_exchange<br/>(topic)"]
            ERR_EX["error_exchange<br/>(fanout)"]
            AUD_EX["audit_exchange<br/>(topic)"]
        end
    end

    %% =========================
    %% CAPA DE DATOS
    %% =========================
    
    subgraph "🗄️ CAPA DE DATOS"
        PostgreSQL["🐘 PostgreSQL
        ════════════════
        • Puerto: 5432
        • Base: banco_db
        • Usuario: banco_user
        • Datos bancarios
        • Transacciones
        • Pool: 10 conexiones"]
        
        MySQL["🐬 MySQL
        ═══════════
        • Puerto: 3306
        • Base: reniec_db
        • Usuario: reniec_user
        • Datos ciudadanos
        • Documentos
        • Pool: 10 conexiones"]
        
        subgraph "💾 Bases de Datos"
            DB1["📊 Tablas Banco
            • clientes
            • cuentas
            • transacciones
            • movimientos"]
            
            DB2["👥 Tablas RENIEC
            • ciudadanos
            • documentos
            • sesiones_validacion
            • auditoria_eventos"]
        end
    end

    %% =========================
    %% CAPA DE CACHE
    %% =========================
    
    subgraph "⚡ CAPA DE CACHE"
        Redis["⚡ Redis Cache
        ═══════════════
        • Puerto: 6379
        • Cache distribuido
        • Sesiones de usuario
        • Resultados consulta
        • Config: 512MB
        • Policy: allkeys-lru"]
        
        subgraph "🎯 Redis Use Cases"
            R1["Session Storage"]
            R2["API Response Cache"]
            R3["Rate Limiting"]
        end
    end

    %% =========================
    %% CAPA DE MONITOREO
    %% =========================
    
    subgraph "📊 CAPA DE MONITOREO"
        Prometheus["📊 Prometheus
        ════════════════
        • Puerto: 9090
        • Métricas temporales
        • Scraping config
        • 30 días retención
        • Alert rules"]
        
        Grafana["📈 Grafana
        ═══════════
        • Puerto: 3000
        • Dashboards
        • Usuario: admin
        • Plugin integration
        • Data visualization"]
        
        subgraph "📈 Métricas Monitoreadas"
            M1["Application Metrics"]
            M2["Database Metrics"]
            M3["System Metrics"]
            M4["Business Metrics"]
        end
    end

    %% =========================
    %% REDES DOCKER
    %% =========================
    
    subgraph "🌐 REDES DOCKER"
        MainNet["shibasito-network
        ═══════════════════
        • Subnet: 172.20.0.0/16
        • Servicios principales"]
        
        DBNet["database-network
        ════════════════
        • Subnet: 172.21.0.0/16
        • Solo servicios DB"]
        
        MonitorNet["monitoring-network
        ════════════════════
        • Subnet: 172.22.0.0/16
        • Solo monitoreo"]
    end

    %% =========================
    %% FLUJOS DE CONEXIÓN
    %% =========================
    
    %% Cliente a Gateway
    Desktop -.->|HTTP/HTTPS| Gateway
    Mobile -.->|HTTP/HTTPS| Gateway
    
    %% Gateway a Servicios
    Gateway -->|Puerto 8080| LP1
    Gateway -->|Puerto 8000| LP2
    
    %% Servicios a Bases de Datos
    LP1 -.->|PostgreSQL| PostgreSQL
    LP2 -.->|MySQL| MySQL
    
    %% Servicios a Cache
    LP1 -.-> Redis
    LP2 -.-> Redis
    
    %% Servicios a Mensajería
    LP1 -.-> RabbitMQ
    LP2 -.-> RabbitMQ
    
    %% Exchanges internos
    RabbitMQ --> VAL_EX
    RabbitMQ --> ERR_EX
    RabbitMQ --> AUD_EX
    
    %% Servicios a Monitoreo
    LP1 -.-> Prometheus
    LP2 -.-> Prometheus
    PostgreSQL -.-> Prometheus
    MySQL -.-> Prometheus
    RabbitMQ -.-> Prometheus
    Redis -.-> Prometheus
    
    %% Grafana a Prometheus
    Grafana -.->|Data Source| Prometheus
    
    %% Asignación de redes
    Desktop -.-> MainNet
    Mobile -.-> MainNet
    LP1 -.-> MainNet
    LP2 -.-> MainNet
    RabbitMQ -.-> MainNet
    
    LP1 -.-> DBNet
    PostgreSQL -.-> DBNet
    LP2 -.-> DBNet
    MySQL -.-> DBNet
    
    Prometheus -.-> MonitorNet
    Grafana -.-> MonitorNet
    
    %% =========================
    %% ESTILOS
    %% =========================
    
    classDef presentation fill:#e3f2fd,stroke:#1976d2,stroke-width:3px
    classDef gateway fill:#e8f5e8,stroke:#388e3c,stroke-width:3px
    classDef service fill:#fff3e0,stroke:#f57c00,stroke-width:3px
    classDef messaging fill:#f3e5f5,stroke:#7b1fa2,stroke-width:3px
    classDef database fill:#e0f2f1,stroke:#00695c,stroke-width:3px
    classDef cache fill:#fce4ec,stroke:#c2185b,stroke-width:3px
    classDef monitoring fill:#fff8e1,stroke:#f9a825,stroke-width:3px
    classDef network fill:#f5f5f5,stroke:#616161,stroke-width:2px
    
    class Desktop,Mobile presentation
    class Gateway gateway
    class LP1,LP2 service
    class RabbitMQ,VAL_EX,ERR_EX,AUD_EX messaging
    class PostgreSQL,MySQL,DB1,DB2 database
    class Redis,R1,R2,R3 cache
    class Prometheus,Grafana,M1,M2,M3,M4 monitoring
    class MainNet,DBNet,MonitorNet network
```

## Arquitectura de Microservicios Detallada

```mermaid
graph LR
    %% Microservicios Core
    subgraph "Core Services"
        LP1["🏦 LP1<br/>Banco"]
        LP2["🏛️ LP2<br/>RENIEC"]
    end
    
    %% Service Mesh
    subgraph "Service Mesh"
        Proxy["🔄 Service Proxy<br/>Load Balancer"]
        Registry["📋 Service Registry<br/>Service Discovery"]
    end
    
    %% Communication Patterns
    subgraph "Communication"
        Sync["🔄 Sync HTTP<br/>REST APIs"]
        Async["📬 Async<br/>Message Queue"]
    end
    
    %% Data Consistency
    subgraph "Data Consistency"
        Saga["📝 Saga Pattern<br/>Distributed Transactions"]
        Event["⚡ Event Sourcing<br/>Eventual Consistency"]
    end
    
    %% LP1 Connections
    LP1 -.-> Sync
    LP1 -.-> Async
    LP1 -.-> Proxy
    LP1 -.-> Saga
    
    %% LP2 Connections
    LP2 -.-> Sync
    LP2 -.-> Async
    LP2 -.-> Proxy
    LP2 -.-> Event
    
    %% Proxy to Registry
    Proxy -.-> Registry
```

## Arquitectura de Datos

```mermaid
erDiagram
    %% Banco LP1 Tables
    CLIENTES {
        int id PK
        string nombres
        string apellidos
        string dni UK
        string email
        string telefono
        datetime fecha_creacion
        boolean activo
    }
    
    CUENTAS {
        int id PK
        int cliente_id FK
        string numero_cuenta UK
        string tipo_cuenta
        decimal saldo
        string estado
        datetime fecha_apertura
    }
    
    TRANSACCIONES {
        int id PK
        int cuenta_id FK
        string tipo_transaccion
        decimal monto
        string descripcion
        datetime fecha_transaccion
        string estado
    }
    
    %% RENIEC LP2 Tables
    CIUDADANOS {
        string numero_documento PK
        string nombres
        string apellido_paterno
        string apellido_materno
        date fecha_nacimiento
        string estado_civil
        text direccion
        string distrito
        string provincia
        string departamento
        datetime creado_en
        datetime actualizado_en
    }
    
    SESIONES_VALIDACION {
        string id_solicitud PK
        string numero_dni FK
        datetime fecha_validacion
        datetime fecha_expiracion
        string estado
        string id_banco
        int intentos_validacion
        datetime creado_en
    }
    
    AUDITORIA_EVENTOS {
        string evento_id PK
        string tipo_evento
        datetime timestamp
        string usuario
        string ip_origen
        json datos_evento
        string session_id
        string resultado
        int duracion_ms
        string hash_integridad
    }
    
    %% Relationships
    CLIENTES ||--o{ CUENTAS : "posee"
    CUENTAS ||--o{ TRANSACCIONES : "genera"
    CIUDADANOS ||--o{ SESIONES_VALIDACION : "valida"
    SESIONES_VALIDACION }o--|| CIUDADANOS : "referencia"
```

## Flujo de Datos Principal

```mermaid
sequenceDiagram
    participant Client as 👤 Cliente
    participant Desktop as 📱 Desktop App
    participant Gateway as 🌐 API Gateway
    participant LP1 as 🏦 Servicio LP1
    participant RMQ as 📬 RabbitMQ
    participant LP2 as 🏛️ Servicio LP2
    participant DB1 as 🐘 PostgreSQL
    participant DB2 as 🐬 MySQL
    participant Cache as ⚡ Redis
    participant Monitor as 📊 Prometheus

    Note over Client,Monitor: Flujo: Solicitud de Validación de Identidad
    
    %% Step 1: Solicitud inicial
    Client->>Desktop: Solicita validación DNI
    Desktop->>Gateway: POST /api/v1/validacion
    
    %% Step 2: Gateway routing
    Gateway->>LP1: Enruta solicitud bancaria
    
    %% Step 3: Preparación mensaje
    LP1->>Cache: Verificar cache sesión
    
    %% Step 4: Publicar mensaje
    LP1->>RMQ: Publicar solicitud validación
    
    %% Step 5: Consumo mensaje
    RMQ->>LP2: Consumir mensaje validación
    
    %% Step 6: Validación datos
    LP2->>DB2: Consultar ciudadano DNI
    
    %% Step 7: Cache resultado
    LP2->>Cache: Guardar resultado
    
    %% Step 8: Respuesta asíncrona
    LP2->>RMQ: Publicar respuesta
    
    %% Step 9: Recibir respuesta
    RMQ->>LP1: Entregar respuesta
    
    %% Step 10: Procesar respuesta
    LP1->>DB1: Registrar transacción
    
    %% Step 11: Métricas
    LP1->>Monitor: Enviar métricas
    
    %% Step 12: Respuesta al cliente
    LP1->>Gateway: Respuesta validación
    Gateway->>Desktop: Resultado validado
    Desktop->>Client: Mostrar resultado
```

## Arquitectura de Deployment

```mermaid
graph TB
    %% Production Environment
    subgraph "🚀 PRODUCTION ENVIRONMENT"
        subgraph "Load Balancer Layer"
            LB["⚖️ Load Balancer<br/>nginx/haproxy"]
        end
        
        subgraph "Application Tier"
            App1["🔄 App Instance 1"]
            App2["🔄 App Instance 2"]
            App3["🔄 App Instance 3"]
        end
        
        subgraph "Data Tier"
            DBCluster["🗄️ Database Cluster<br/>Master-Slave"]
            CacheCluster["⚡ Cache Cluster<br/>Redis Cluster"]
        end
    end
    
    %% Development Environment
    subgraph "🛠️ DEVELOPMENT ENVIRONMENT"
        DevApp["💻 Dev Instance"]
        DevDB["🗄️ Dev Database"]
    end
    
    %% Monitoring Stack
    subgraph "📊 MONITORING STACK"
        Prometheus["📊 Prometheus"]
        Grafana["📈 Grafana"]
        AlertManager["🚨 AlertManager"]
    end
    
    %% Container Orchestration
    subgraph "🐳 CONTAINER ORCHESTRATION"
        DockerSwarm["🐳 Docker Swarm"]
        Compose["📋 Docker Compose"]
    end
    
    %% External Services
    subgraph "☁️ EXTERNAL SERVICES"
        Backup["💾 Backup Service"]
        LogAggregation["📋 Log Aggregation"]
    end
    
    %% Connections
    LB --> App1
    LB --> App2
    LB --> App3
    
    App1 --> DBCluster
    App2 --> DBCluster
    App3 --> DBCluster
    
    App1 --> CacheCluster
    App2 --> CacheCluster
    App3 --> CacheCluster
    
    App1 -.-> Prometheus
    App2 -.-> Prometheus
    App3 -.-> Prometheus
    
    Prometheus --> Grafana
    Prometheus --> AlertManager
    
    DBCluster -.-> Backup
    App1 -.-> LogAggregation
    App2 -.-> LogAggregation
    App3 -.-> LogAggregation
    
    %% Estilos
    classDef prod fill:#e8f5e8,stroke:#4caf50,stroke-width:2px
    classDef dev fill:#fff3e0,stroke:#ff9800,stroke-width:2px
    classDef monitor fill:#e3f2fd,stroke:#2196f3,stroke-width:2px
    classDef container fill:#f3e5f5,stroke:#9c27b0,stroke-width:2px
    classDef external fill:#fce4ec,stroke:#e91e63,stroke-width:2px
    
    class App1,App2,App3,DBCluster,CacheCluster,LB prod
    class DevApp,DevDB dev
    class Prometheus,Grafana,AlertManager monitor
    class DockerSwarm,Compose container
    class Backup,LogAggregation external
```

## Consideraciones de Escalabilidad

```mermaid
graph TB
    %% Horizontal Scaling
    subgraph "📈 HORIZONTAL SCALING"
        LoadBalancer["⚖️ Load Balancer"]
        
        subgraph "LP1 Instances"
            LP1_1["🏦 LP1 Instance 1"]
            LP1_2["🏦 LP1 Instance 2"]
            LP1_N["🏦 LP1 Instance N"]
        end
        
        subgraph "LP2 Instances"
            LP2_1["🏛️ LP2 Instance 1"]
            LP2_2["🏛️ LP2 Instance 2"]
            LP2_N["🏛️ LP2 Instance N"]
        end
    end
    
    %% Vertical Scaling
    subgraph "📊 VERTICAL SCALING"
        CPU["🖥️ CPU Optimization"]
        Memory["💾 Memory Tuning"]
        Storage["💿 Storage IOPS"]
    end
    
    %% Database Scaling
    subgraph "🗄️ DATABASE SCALING"
        ReadReplica["📖 Read Replicas"]
        Sharding["📊 Data Sharding"]
        Partitioning["📋 Table Partitioning"]
    end
    
    %% Cache Scaling
    subgraph "⚡ CACHE SCALING"
        RedisCluster["🌐 Redis Cluster"]
        CDN["🌍 Content Delivery Network"]
        LocalCache["💻 Local Application Cache"]
    end
    
    %% Auto Scaling
    subgraph "🤖 AUTO SCALING"
        Metrics["📊 Metrics Collector"]
        Triggers["⚡ Scaling Triggers"]
        Actions["🔄 Scaling Actions"]
    end
    
    %% Connections
    LoadBalancer --> LP1_1
    LoadBalancer --> LP1_2
    LoadBalancer --> LP1_N
    
    LoadBalancer --> LP2_1
    LoadBalancer --> LP2_2
    LoadBalancer --> LP2_N
    
    CPU -.-> LP1_1
    Memory -.-> LP1_1
    Storage -.-> LP1_1
    
    ReadReplica -.-> LP1_1
    Sharding -.-> LP1_1
    Partitioning -.-> LP1_1
    
    RedisCluster -.-> LP1_1
    CDN -.-> LP1_1
    LocalCache -.-> LP1_1
    
    Metrics --> Triggers
    Triggers --> Actions
    Actions -.-> LP1_1
    Actions -.-> LP2_1
    
    %% Estilos
    classDef horizontal fill:#e1f5fe,stroke:#0288d1,stroke-width:2px
    classDef vertical fill:#e8f5e8,stroke:#388e3c,stroke-width:2px
    classDef database fill:#fff3e0,stroke:#f57c00,stroke-width:2px
    classDef cache fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
    classDef autoscaling fill:#fce4ec,stroke:#c2185b,stroke-width:2px
    
    class LP1_1,LP1_2,LP1_N,LP2_1,LP2_2,LP2_N,LoadBalancer horizontal
    class CPU,Memory,Storage vertical
    class ReadReplica,Sharding,Partitioning database
    class RedisCluster,CDN,LocalCache cache
    class Metrics,Triggers,Actions autoscaling
```

---

## 📋 Resumen de Arquitectura

### Principios Arquitectónicos

1. **Separación de Responsabilidades**: Cada microservicio tiene una responsabilidad específica
2. **Escalabilidad Horizontal**: Capacidad de agregar instancias según demanda
3. **Tolerancia a Fallos**: Redundancia en servicios críticos
4. **Desacoplamiento**: Comunicación asíncrona entre servicios
5. **Observabilidad**: Monitoreo completo del sistema

### Tecnologías Utilizadas

| Capa | Tecnología | Versión | Propósito |
|------|------------|---------|-----------|
| **Backend** | Java/Spring Boot | 11+ | Servicio LP1 Banco |
| **Backend** | Python/FastAPI | 3.11+ | Servicio LP2 RENIEC |
| **Frontend** | Electron/Node.js | 18+ | Aplicación Desktop |
| **Frontend** | React Native | 0.72+ | Aplicación Mobile |
| **Message Queue** | RabbitMQ | 3.11+ | Comunicación asíncrona |
| **Cache** | Redis | 7.0+ | Cache distribuido |
| **Database** | PostgreSQL | 14+ | Datos bancarios |
| **Database** | MySQL | 8.0+ | Datos ciudadanos |
| **Monitoring** | Prometheus | 2.40+ | Métricas del sistema |
| **Visualization** | Grafana | 9.3+ | Dashboards |
| **Container** | Docker | 20.10+ | Contenedorización |
| **Orchestration** | Docker Compose | 2.0+ | Orquestación |

### Métricas de Rendimiento Objetivo

| Métrica | Valor Objetivo | Valor de Alerta |
|---------|----------------|-----------------|
| **Tiempo de respuesta API** | < 500ms | > 1s |
| **Throughput validaciones** | > 100/min | < 50/min |
| **Disponibilidad** | > 99.9% | < 99% |
| **Uso CPU** | < 70% | > 85% |
| **Uso Memoria** | < 80% | > 90% |

---

**Documento generado**: 30 de Octubre de 2025  
**Versión**: 1.0  
**Última actualización**: 30 de Octubre de 2025
